[project]
name = "yolo-censor"
version = "0.1.0"
description = "Image censor using YOLO model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.0",
    "questionary>=2.1.0",
    "toml>=0.10.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "ultralytics>=8.3.91",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
